--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                   <input class="form-control" id="destination-input" type="text">
                 </div>
                 <div class="form-group">
-                  <label for="first-train-input">First Train Time (HH:mm - miltary time ex: 17:20)</label>
+                  <label for="first-train-input">First Train Time in miltary time (example: 5:20 PM = 17:20)</label>
                   <input class="form-control" id="first-train-input" type="text">
                 </div>
                 <div class="form-group">
